fix on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,8 @@ main {
 and (orientation: portrait) {
 main {
 	height: 99%;
-	width: 99%;	
+    width: 99%;	
+    flex-wrap: wrap;
 }
 
 .chart-row  {
